src/test/resources/purescript_examples/failing/LetPatterns1.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith ErrorParsingModule\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n-- wrong binders for function, the first one should be VarBinder\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PsiElement(identifier)('x')
        PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)('\n  ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSLetImpl(Let)
              PsiElement(let)('let')
              PsiElement(whitespace)(' ')
              PSValueDeclarationImpl(ValueDeclaration)
                PsiElement(()('(')
                PSConstructorImpl(Constructor)
                  PSProperNameImpl(ProperName)
                    PsiElement(proper name)('X')
                    PsiElement(whitespace)(' ')
                PsiElement(identifier)('a')
                PsiElement(whitespace)(' ')
                PsiElement(identifier)('b')
                PSNamedBinderImpl(NamedBinder)
                  <empty list>
                PsiElement())(')')
                PsiElement(whitespace)(' ')
                PSBinderImpl(Binder)
                  PSVarBinderImpl(VarBinder)
                    PsiElement(identifier)('x')
                    PsiElement(whitespace)(' ')
                PSBinderImpl(Binder)
                  PSVarBinderImpl(VarBinder)
                    PsiElement(identifier)('y')
                    PsiElement(whitespace)(' ')
                PsiElement(=)('=')
                PsiElement(whitespace)(' ')
                PSValueImpl(Value)
                  PSPrefixValueImpl(PrefixValue)
                    PSVarImpl(Var)
                      PSQualifiedImpl(Qualified)
                        PsiElement(identifier)('hoge')
                        PsiElement(whitespace)('\n  ')
              PsiElement(in)('in')
              PsiElement(whitespace)('\n   ')
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSVarImpl(Var)
                    PSQualifiedImpl(Qualified)
                      PsiElement(identifier)('a')
                      PsiElement(whitespace)('\n')
